Consistency check for prices. Java 11. Sorting in watch list.